# RadarSLAM-Bot

./: DESIGN.md  FEATURES_ANALYSIS.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  VERIFICATION.md
fishbot_slam/: CMakeLists.txt  package.xml
fishbot_slam/config/: astar_planner_params.yaml  diff_drive_controller.yaml  fishbot_slam.rviz  path_follower_params.yaml  slam_toolbox_params.yaml
fishbot_slam/launch/: astar_navigation.launch.py  fishbot_slam.launch.py  gazebo_sim.launch.py  slam.launch.py
fishbot_slam/scripts/: astar_planner.py  path_follower.py  save_map.py  teleop_keyboard.py
fishbot_slam/urdf/: fishbot.urdf.xacro  fishbot_base.urdf.xacro
fishbot_slam/worlds/: fishbot_world.world
matlab_simulation/: README.txt  fishbot_slam_main.m
matlab_simulation/utils/: createEnvironment.m  generateLidarScan.m  generateTrajectory.m  plotCurrentScan.m  saveResults.m  visualizeResults.m
